--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <p><a href="https://gist.github.com/chrisrzhou/d5bdd8546f64ca0e4366" target="_blank">D3 Sunburst Sequence</a> by chrisrzhou, 2014-12-29
       <br />
       <a href="http://github.com/chrisrzhou" target="_blank"><i class="fa fa-github"></i></a> |
-      <a href="http://bl.ocks.org/chrisrzhou" target="_blank"><i class="fa fa-th"></i></a> |
+      <a href="http://bl.ocks.org/chrisrzhou" target="_blank"><i class="fa fa-cubes"></i></a> |
       <a href="http://www.linkedin.com/in/chrisrzhou" target="_blank"><i class="fa fa-linkedin"></i></a>
     </p>
   </footer>
