--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="Details">
       <h2>Details</h2>
       <p>
-        This is a variation of the original <a href="http://bl.ocks.org/kerryrodden/7090426" target="_blank">sunburst sequence</a>. A major improvement to the original vis is to organize the code base and draw the D3 components (breadcrumbs, sunburst,
+        This is a variation of the original <a href="http://bl.ocks.org/kerryrodden/7090426">sunburst sequence</a>. A major improvement to the original vis is to organize the code base and draw the D3 components (breadcrumbs, sunburst,
         legend) from a single HTML <code>div</code> tag, and to dynamically assign color and legend scales.
       </p>
       <p>
