--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- header -->
   <header class="page-header">
     <h1>Student Cumulative GPA Sequence</h1> 
-    <p class="text-small">Interactive sunburst visualization of sequential data changes.</p>
+    <p class="text-small">Interactive sunburst visualization of sequential studennt cumlative GPA and PAG Status changes.</p>
   </header>
 
 
@@ -23,9 +23,9 @@
   <div class="main" ng-controller="MainCtrl as sunburst">
 
     <!-- visualization -->
-    <h2>Visualization</h2>
+     <p>Visualization shows the students cumulative GPA group after each fall and graduation status by first term GPA group</p>
     <p>Hover for data summary, click on visualization to reset summary.</p>
-    <p>Select Group: <select ng-options="example for example in sunburst.examples" ng-model="sunburst.exampleSelected" ng-change="sunburst.selectExample(sunburst.exampleSelected)"></select></p>
+    <p>Select 1st GPAS Group: <select ng-options="example for example in sunburst.examples" ng-model="sunburst.exampleSelected" ng-change="sunburst.selectExample(sunburst.exampleSelected)"></select></p>
    
     <div class="visualization">
       <sunburst data="sunburst.data"></sunburst>
